Fixed the line-height, particular visible in the About section

--- a/themes/ejangi/assets/scss/_fonts.scss
+++ b/themes/ejangi/assets/scss/_fonts.scss
@@ -15,7 +15,7 @@ body {
     @include sans;
     font-size: 11pt;
     color: $color-secondary;
-    line-height: 145%;
+    line-height: 155%;
 }
 
 h1 {
